Add helpers/constant responses, update swagger.json
