# server/public/swagger.v1.json
@@ -25,9 +25,11 @@
             "description": "Operations about user"
         }
     ],
-    "security": {
-        "bearerAuth": []
-    },
+    "security": [
+        {
+            "bearerAuth": []
+        }
+    ],
     "paths": {
         "/api/chatRooms": {
             "get": {
@@ -45,7 +47,13 @@
             "get": {
                 "tags": [
                     "Chat"
-                ]
+                ],
+                "summary": "get a chat room by id.",
+                "responses": {
+                    "404": {
+                        "$ref": "#/components/responses/404NotFound"
+                    }
+                }
             },
             "put": {
                 "tags": [
@@ -62,14 +70,132 @@
             "post": {
                 "tags": [
                     "User Management"
-                ]
+                ],
+                "summary": "Create a new user.",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "username": {
+                                        "type": "string"
+                                    },
+                                    "displayName": {
+                                        "type": "string"
+                                    },
+                                    "email": {
+                                        "type": "string",
+                                        "format": "email",
+                                        "nullable": true
+                                    },
+                                    "password": {
+                                        "type": "string",
+                                        "format": "password"
+                                    }
+                                },
+                                "required": [
+                                    "username",
+                                    "displayName",
+                                    "password  "
+                                ]
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Message user register successfuly.",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/DefaultMessageResponse"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Register failed request model invalid or user exists.",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "oneOf": [
+                                        {
+                                            "$ref": "#/components/schemas/DefaultMessageResponse"
+                                        },
+                                        {
+                                            "$ref": "#/components/schemas/ErrorModelMessageResponse"
+                                        }
+                                    ]
+                                }
+                            }
+                        }
+                    }
+                }
             }
         },
         "/api/users/login": {
             "post": {
                 "tags": [
                     "User Management"
-                ]
+                ],
+                "summary": "Create a new user.",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "username": {
+                                        "type": "string"
+                                    },
+                                    "password": {
+                                        "type": "string",
+                                        "format": "password"
+                                    }
+                                },
+                                "required": [
+                                    "username",
+                                    "password  "
+                                ]
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Return login sucessfully message and jwt token.",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string"
+                                        },
+                                        "token": {
+                                            "type": "string"
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Username or password is invalid, login failed,.",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "oneOf": [
+                                        {
+                                            "$ref": "#/components/schemas/DefaultMessageResponse"
+                                        },
+                                        {
+                                            "$ref": "#/components/schemas/ErrorModelMessageResponse"
+                                        }
+                                    ]
+                                }
+                            }
+                        }
+                    }
+                }
             }
         }
     },
@@ -116,6 +242,54 @@
                         }
                     }
                 }
+            },
+            "ValidationError": {
+                "type": "object",
+                "properties": {
+                    "param": {
+                        "type": "string"
+                    },
+                    "msg": {
+                        "type": "string"
+                    },
+                    "nestedErrors": {
+                        "type": "array",
+                        "nullable": true,
+                        "items": {
+                            "type": "object"
+                        }
+                    },
+                    "location": {
+                        "type": "string",
+                        "nullable": true
+                    },
+                    "value": {
+                        "type": "string",
+                        "nullable": true
+                    }
+                }
+            },
+            "DefaultMessageResponse": {
+                "type": "object",
+                "properties": {
+                    "message": {
+                        "type": "string"
+                    }
+                }
+            },
+            "ErrorModelMessageResponse": {
+                "type": "object",
+                "properties": {
+                    "message": {
+                        "type": "string"
+                    },
+                    "errors": {
+                        "type": "array",
+                        "items": {
+                            "$ref": "#/components/schemas/ValidationError"
+                        }
+                    }
+                }
             }
         },
         "securitySchemes": {
@@ -123,6 +297,47 @@
                 "type": "http",
                 "scheme": "bearer",
                 "bearerFormat": "JWT"
+            }
+        },
+        "responses": {
+            "401Unauthorized": {
+                "description": "User unauthenticated.",
+                "content": {
+                    "application/json": {
+                        "schema": {
+                            "$ref": "#/components/schemas/DefaultMessageResponse"
+                        },
+                        "example": {
+                            "messsage": "Unauthorized."
+                        }
+                    }
+                }
+            },
+            "403Forbidden": {
+                "description": "The specified resource was access denied.",
+                "content": {
+                    "application/json": {
+                        "schema": {
+                            "$ref": "#/components/schemas/DefaultMessageResponse"
+                        },
+                        "example": {
+                            "messsage": "NotFound."
+                        }
+                    }
+                }
+            },
+            "404NotFound": {
+                "description": "The specified resource was not found.",
+                "content": {
+                    "application/json": {
+                        "schema": {
+                            "$ref": "#/components/schemas/DefaultMessageResponse"
+                        },
+                        "example": {
+                            "messsage": "NotFound."
+                        }
+                    }
+                }
             }
         }
     }
